added new Migration, fixed wrong DbConnection string

--- a/backend/API/appsettings.json
+++ b/backend/API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=TicketDb.sqlite"
+    "DefaultConnection": "Data Source=../Data/TicketDb.sqlite"
   },
   "Logging": {
     "LogLevel": {
