Added Create Ticket Func, Changed User Phone Number to nullable,

--- a/backend/API/appsettings.json
+++ b/backend/API/appsettings.json
@@ -2,11 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=../Data/TicketDb.sqlite"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+  //"Logging": {
+  //  "LogLevel": {
+  //    "Default": "Information",
+  //    "Microsoft.AspNetCore": "Warning"
+  //  }
+  //},
   "AllowedHosts": "*"
 }
