--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "frontend",
-  "type": "module",
-  "version": "0.0.0",
+  "name": "nuxt-app",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint",
-    "lint:fix": "eslint --fix"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "typescript": "^5.6.2",
-    "unimport": "^3.12.0",
-    "vue": "^3.4.37"
-  },
-  "devDependencies": {
-    "@antfu/eslint-config": "^3.6.2",
-    "@vitejs/plugin-vue": "^5.1.2",
-    "eslint": "^9.10.0",
-    "eslint-plugin-format": "^0.1.2",
-    "vite": "^5.4.1"
+    "@nuxtjs/color-mode": "3.5.2",
+    "@nuxtjs/tailwindcss": "6.12.2",
+    "@radix-icons/vue": "^1.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "nuxt": "^3.15.1",
+    "radix-vue": "^1.9.12",
+    "shadcn-nuxt": "0.11.3",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "vue": "latest",
+    "vue-router": "latest"
   }
 }
