--- a/backend/API/Properties/launchSettings.json
+++ b/backend/API/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "https://localhost:7257;http://localhost:5028",
+      "applicationUrl": "https://localhost:7257",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
