chore: add linter

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,15 +1,19 @@
 {
   "name": "nuxt-app",
-  "private": true,
   "type": "module",
+  "private": true,
+  "packageManager": "pnpm@8.15.7+sha512.c85cd21b6da10332156b1ca2aa79c0a61ee7ad2eb0453b88ab299289e9e8ca93e6091232b25c07cbf61f6df77128d9c849e5c9ac6e44854dbd211c49f3a67adc",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "clean": "nuxt cleanup",
+    "lint": "eslint --fix"
   },
   "dependencies": {
+    "@nuxt/eslint": "0.7.5",
     "@nuxtjs/color-mode": "3.5.2",
     "@nuxtjs/tailwindcss": "6.12.2",
     "@radix-icons/vue": "^1.0.0",
@@ -25,7 +29,8 @@
     "vue-router": "latest"
   },
   "devDependencies": {
-    "@formkit/auto-animate": "^0.8.2"
-  },
-  "packageManager": "pnpm@8.15.7+sha512.c85cd21b6da10332156b1ca2aa79c0a61ee7ad2eb0453b88ab299289e9e8ca93e6091232b25c07cbf61f6df77128d9c849e5c9ac6e44854dbd211c49f3a67adc"
+    "@antfu/eslint-config": "^3.14.0",
+    "@formkit/auto-animate": "^0.8.2",
+    "eslint": "^9.18.0"
+  }
 }
