--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^3.14.0",
     "@formkit/auto-animate": "^0.8.2",
-    "eslint": "^9.18.0"
+    "eslint": "^9.18.0",
+    "eslint-plugin-format": "^1.0.1"
   }
 }
